--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "jquery": "^3.4.1",
     "local-time": "^2.1.0",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuedraggable": "^2.23.2"
   },
   "version": "0.1.0",
   "devDependencies": {
