--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
+    "vue-turbolinks": "^2.1.0",
     "vuedraggable": "^2.23.2"
   },
   "version": "0.1.0",
