--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
     "vue-turbolinks": "^2.1.0",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
